# final-fitter

./: Cargo.toml  Justfile  README.md  config.example.toml
crates/compute/: Cargo.toml
crates/ctl/: Cargo.toml
crates/ctl/src/: error.rs  lib.rs  log.rs  main.rs
crates/ctl/src/cli/: args.rs  config.rs  mod.rs
crates/ctl/src/commands/: mod.rs  ping.rs  start.rs  status.rs  stop.rs
crates/ctl/src/config/: constants.rs  ctl.rs  mod.rs
crates/ctl/src/infra/: grpc.rs  mod.rs  process.rs
crates/daemon/: Cargo.toml  buf.gen.yaml  build.rs
crates/daemon/proto/daemon/v1/: ping.proto
crates/daemon/proto/ping/v1/: ping.proto
crates/daemon/src/: error.rs  lib.rs  main.rs
crates/daemon/src/cli/: args.rs  config.rs  mod.rs
crates/daemon/src/config/: daemon.rs  mod.rs  paths.rs
crates/daemon/src/di/: container.rs
crates/daemon/src/domain/: error.rs  mod.rs  ping.rs
crates/daemon/src/server/: grpc.rs  listener.rs  lock.rs  mod.rs  process.rs  server.rs  shutdown.rs
crates/daemon/src/ui/: mod.rs  router.rs
crates/daemon/src/ui/grpc/: error.rs  mod.rs  ping.rs
crates/daemon/src/usecase/: mod.rs  ping.rs
