[workspace]
resolver = "2"

members = ["crates/compute", "crates/ctl", "crates/daemon", "crates/types"]

[workspace.dependencies]
types = { path = "crates/types" }
compute = { path = "crates/compute" }
daemon = { path = "crates/daemon" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
