[package]
name = "ctl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ffit"
path = "src/main.rs"

[dependencies]
daemon = { path = "../daemon" }
tonic = "0.14.2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "process",
    "time",
] }
clap = { version = "4", features = ["derive"] }
thiserror = "2.0.17"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }
