[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ffit-daemon"
path = "src/main.rs"

[dependencies]
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
prost = "0.14.1"
